updated to support mssql entra id
moved setting to secrets

Use Azure Key Vault

Removed service bus configuration from appsettings.json

--- a/src/Accredi.DbMigrator/appsettings.json
+++ b/src/Accredi.DbMigrator/appsettings.json
@@ -1,9 +1,9 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Accredi;Trusted_Connection=True;TrustServerCertificate=true"
+  "App": {
+  "KeyVaultName": "accredi-keyvault"
   },
-  "Redis": {
-    "Configuration": "127.0.0.1"
+  "ConnectionStrings": {
+    "Default": "Server=tcp:accredi-sqlserver.database.windows.net,1433;Initial Catalog=accredi-core;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   },
   "OpenIddict": {
     "Applications": {
