--- a/src/Accredi.HttpApi.Host/appsettings.json
+++ b/src/Accredi.HttpApi.Host/appsettings.json
@@ -4,23 +4,17 @@
     "MVCPublicUrl": "https://localhost:44364",
     "CorsOrigins": "https://*.Accredi.com",
     "DisablePII": false,
-    "HealthCheckUrl": "/health-status"
+    "HealthCheckUrl": "/health-status",
+    "KeyVaultName": "accredi-keyvault"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Accredi;Trusted_Connection=True;TrustServerCertificate=true"
+    "Default": "Server=tcp:accredi-sqlserver.database.windows.net,1433;Initial Catalog=accredi-core;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   },
-  "Redis": {
-    "Configuration": "127.0.0.1"
-  },
-  "RabbitMQ": {
-    "Connections": {
-      "Default": {
-        "HostName": "localhost"
-      }
-    },
+  "Azure": {
     "EventBus": {
-      "ClientName": "HttpApiHost",
-      "ExchangeName": "Accredi"
+      "ConnectionName": "Default",
+      "SubscriberName": "API",
+      "TopicName": "accredi"
     }
   },
   "AuthServer": {
@@ -31,4 +25,5 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "Y7PJXll8twmJYu9i"
-  }}
+  }
+}
