--- a/src/Accredi.Web/appsettings.json
+++ b/src/Accredi.Web/appsettings.json
@@ -2,7 +2,8 @@
   "App": {
     "SelfUrl": "https://localhost:44360",
     "DisablePII": false,
-    "HealthCheckUrl": "/health-status"
+    "HealthCheckUrl": "/health-status",
+    "KeyVaultName": "accredi-keyvault"
   },
   "RemoteServices": {
     "Default": {
@@ -12,18 +13,11 @@
       "BaseUrl": "https://localhost:44359/"
     }
   },
-  "Redis": {
-    "Configuration": "127.0.0.1"
-  },
-  "RabbitMQ": {
-    "Connections": {
-      "Default": {
-        "HostName": "localhost"
-      }
-    },
+  "Azure": {
     "EventBus": {
-      "ClientName": "Web",
-      "ExchangeName": "Accredi"
+      "ConnectionName": "Default",
+      "SubscriberName": "API",
+      "TopicName": "accredi"
     }
   },
   "AuthServer": {
