--- a/src/Accredi.AuthServer/appsettings.json
+++ b/src/Accredi.AuthServer/appsettings.json
@@ -4,10 +4,11 @@
     "CorsOrigins": "https://*.Accredi.com,http://localhost:4200,https://localhost:44383,https://localhost:44347,https://localhost:44319",
     "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44360,https://localhost:44383,https://localhost:44358,https://localhost:44347",
     "DisablePII": false,
-    "HealthCheckUrl": "/health-status"
+    "HealthCheckUrl": "/health-status",
+    "KeyVaultName": "accredi-keyvault"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Accredi;Trusted_Connection=True;TrustServerCertificate=true"
+    "Default": "Server=tcp:accredi-sqlserver.database.windows.net,1433;Initial Catalog=accredi-core;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=\"Active Directory Default\";"
   },
   "AuthServer": {
     "Authority": "https://localhost:44359",
@@ -16,8 +17,5 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "Y7PJXll8twmJYu9i"
-  },
-  "Redis": {
-    "Configuration": "127.0.0.1"
   }
 }
