--- a/src/Accredi.EntityFrameworkCore/Accredi.EntityFrameworkCore.csproj
+++ b/src/Accredi.EntityFrameworkCore/Accredi.EntityFrameworkCore.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Accredi.Azure\Accredi.Azure.csproj" />
     <ProjectReference Include="..\Accredi.Domain\Accredi.Domain.csproj" />
   </ItemGroup>
 
