--- a/src/Accredi.HttpApi.Host/Accredi.HttpApi.Host.csproj
+++ b/src/Accredi.HttpApi.Host/Accredi.HttpApi.Host.csproj
@@ -29,12 +29,12 @@
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="9.1.0" />
     <PackageReference Include="Volo.Abp.Autofac" Version="9.1.0" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="9.1.0" />
+    <PackageReference Include="Volo.Abp.EventBus.Azure" Version="9.1.1" />
     <PackageReference Include="Volo.Abp.Identity.AspNetCore" Version="9.1.0" />
     <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="9.1.0" />
     <PackageReference Include="Volo.Abp.DistributedLocking" Version="9.1.0" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="9.1.0" />
     <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="9.1.0" />
-    <PackageReference Include="Volo.Abp.EventBus.RabbitMQ" Version="9.1.0" />
   </ItemGroup>
 
   <ItemGroup>
