--- a/src/Accredi.Web/Accredi.Web.csproj
+++ b/src/Accredi.Web/Accredi.Web.csproj
@@ -26,12 +26,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Accredi.Azure\Accredi.Azure.csproj" />
     <ProjectReference Include="..\Accredi.HttpApi.Client\Accredi.HttpApi.Client.csproj" />
     <ProjectReference Include="..\Accredi.HttpApi\Accredi.HttpApi.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Autofac" Version="9.1.0" />
+    <PackageReference Include="Volo.Abp.EventBus.Azure" Version="9.1.1" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="9.1.0" />
     <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="9.1.0" />
     <PackageReference Include="Volo.Abp.DistributedLocking" Version="9.1.0" />
@@ -39,7 +41,6 @@
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc.Client" Version="9.1.0" />
     <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="9.1.0" />
     <PackageReference Include="Volo.Abp.Http.Client.Web" Version="9.1.0" />
-    <PackageReference Include="Volo.Abp.EventBus.RabbitMQ" Version="9.1.0" />
   </ItemGroup>
 
   <ItemGroup>
