converted to use azure secrets for the certificate

--- a/src/Accredi.AuthServer/Properties/launchSettings.json
+++ b/src/Accredi.AuthServer/Properties/launchSettings.json
@@ -8,19 +8,21 @@
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "Accredi.AuthServer": {
+    "Accredi.AuthServer - Dev": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:44359",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+
+    "Accredi.AuthServer - Prod": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:44359",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
