--- a/src/Accredi.Azure/Accredi.Azure.csproj
+++ b/src/Accredi.Azure/Accredi.Azure.csproj
@@ -15,8 +15,10 @@
     <ItemGroup>
       <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
       <PackageReference Include="Azure.Identity" Version="1.11.4" />
+      <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.7.0" />
       <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.7.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
+      <PackageReference Include="OpenIddict.Server" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
