--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,10 @@ jobs:
 
       - name: Add nuget repo
         run: dotnet nuget add source --username USERNAME --password ${{secrets.PAT_TOKEN}} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/AccrediWorks/index.json"
-
+ 
+      - name: Restore workloads
+        run: dotnet workload restore
+      
       - name: Build Solution
         run: dotnet build -c Release
 
