--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,10 +85,7 @@ jobs:
       artifact_name: web
       image_name: accredi-web
       version_number: ${{ needs.publish-web.outputs.version_number }}
-    secrets:
-      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    secrets: inherit
 
   docker-api:
     name: Package api
@@ -98,10 +95,7 @@ jobs:
       artifact_name: api
       image_name: accredi-api
       version_number: ${{ needs.publish-api.outputs.version_number }}
-    secrets:
-      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    secrets: inherit
 
   docker-auth:
     name: Package auth
@@ -111,10 +105,7 @@ jobs:
       artifact_name: auth
       image_name: accredi-auth
       version_number: ${{ needs.publish-auth.outputs.version_number }}
-    secrets:
-      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    secrets: inherit
 
   release:
     name: Create release
@@ -137,9 +128,7 @@ jobs:
       app_name: accredi-web
       image_name: accredi-web
       version_number: ${{ needs.release.outputs.version_number }}
-    secrets:
-      AZURE_LOGIN: ${{ secrets.AZURE_LOGIN }}
-      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+    secrets: inherit
   
   deploy-api:
     needs: [ "release" ]
@@ -148,9 +137,7 @@ jobs:
       app_name: accredi-api
       image_name: accredi-api
       version_number: ${{ needs.release.outputs.version_number }}
-    secrets:
-      AZURE_LOGIN: ${{ secrets.AZURE_LOGIN }}
-      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+    secrets: inherit
       
   deploy-auth:
     needs: [ "release" ]
@@ -159,6 +146,4 @@ jobs:
       app_name: accredi-auth
       image_name: accredi-auth
       version_number: ${{ needs.release.outputs.version_number }}
-    secrets:
-      AZURE_LOGIN: ${{ secrets.AZURE_LOGIN }}
-      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+    secrets: inherit
