--- a/.github/workflows/publish-service.yml
+++ b/.github/workflows/publish-service.yml
@@ -21,6 +21,7 @@ on:
     outputs:
       version_number:
         description: "Version number of the published service"
+        value: ${{ jobs.publish.outputs.version_number }}
 
 jobs:
   publish:
