--- a/src/Accredi.AuthServer/Dockerfile
+++ b/src/Accredi.AuthServer/Dockerfile
@@ -1,5 +1,5 @@
 FROM mcr.microsoft.com/dotnet/aspnet:9.0
-COPY . .
+COPY . /app
 WORKDIR /app
 ENV ASPNETCORE_URLS=http://+:80
 ENTRYPOINT ["dotnet", "Accredi.AuthServer.dll"]
