--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -12,6 +12,11 @@ on:
       version_number:
         required: true
         type: string
+        
+    secrets: 
+      AZURE_REGISTRY_URL:
+        required: true
+        
     outputs:
       version_number:
         description: "Version number of the published service"
@@ -38,8 +43,6 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.AZURE_REGISTRY_URL }}
-          username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
-          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
 
       - name: Docker meta
         id: meta
