--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,48 +84,48 @@ jobs:
 
   docker-portal:
     name: Package web
-    needs: [ "publish-portal" ]
+    needs: [ "publish-portal", "build-solution" ]
     uses: ./.github/workflows/build-docker-image.yml
     with:
       artifact_name: web
       image_name: accredi-portal
-      version_number: ${{ needs.publish-portal.outputs.version_number }}
+      version_number: ${{ needs.build-solution.outputs.version_number }}
     secrets: inherit
 
   docker-api:
     name: Package api
-    needs: [ "publish-api" ]
+    needs: [ "publish-api", "build-solution" ]
     uses: ./.github/workflows/build-docker-image.yml
     with:
       artifact_name: api
       image_name: accredi-api
-      version_number: ${{ needs.publish-api.outputs.version_number }}
+      version_number: ${{ needs.build-solution.outputs.version_number }}
     secrets: inherit
 
   docker-account:
     name: Package auth
-    needs: [ "publish-account" ]
+    needs: [ "publish-account", "build-solution" ]
     uses: ./.github/workflows/build-docker-image.yml
     with:
       artifact_name: auth
       image_name: accredi-account
-      version_number: ${{ needs.publish-account.outputs.version_number }}
+      version_number: ${{ needs.build-solution.outputs.version_number }}
     secrets: inherit
 
   release:
     name: Create release
     runs-on: ubuntu-latest
-    needs: [ "docker-portal","docker-api" ,"docker-account"]
+    needs: [ "docker-portal","docker-api" ,"docker-account", "build-solution"]
 
     steps:
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
-          tag: v${{ needs.docker-account.outputs.version_number }}
-          name: Release ${{ needs.docker-account.outputs.version_number }}
+          tag: v${{ needs.build-solution.outputs.version_number }}
+          name: Release ${{ needs.build-solution.outputs.version_number }}
   
   deploy-portal:
-    needs: [ "release" ]
+    needs: [ "release", "build-solution" ]
     uses: ./.github/workflows/deploy-service.yml
     with:
       app_name: accredi-portal
@@ -134,7 +134,7 @@ jobs:
     secrets: inherit
   
   deploy-api:
-    needs: [ "release" ]
+    needs: [ "release", "build-solution" ]
     uses: ./.github/workflows/deploy-service.yml
     with:
       app_name: accredi-api
@@ -143,7 +143,7 @@ jobs:
     secrets: inherit
       
   deploy-account:
-    needs: [ "release" ]
+    needs: [ "release", "build-solution" ]
     uses: ./.github/workflows/deploy-service.yml
     with:
       app_name: accredi-account
