--- a/src/Accredi.HttpApi.Host/appsettings.Development.json
+++ b/src/Accredi.HttpApi.Host/appsettings.Development.json
@@ -1,2 +1,16 @@
 {
+  "App": {
+    "SelfUrl": "https://localhost:44319",
+    "MVCPublicUrl": "https://localhost:44364",
+    "CorsOrigins": "https://*.Accredi.com",
+    "DisablePII": false,
+    "HealthCheckUrl": "/health-status",
+    "KeyVaultName": "accredi-keyvault"
+  },
+  "AuthServer": {
+    "Authority": "https://localhost:44359",
+    "RequireHttpsMetadata": true,
+    "MetaAddress": "https://localhost:44359",
+    "SwaggerClientId": "Accredi_Swagger"
+  }
 }
