--- a/src/Accredi.HttpApi.Host/appsettings.json
+++ b/src/Accredi.HttpApi.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "App": {
-    "SelfUrl": "https://localhost:44319",
+    "SelfUrl": "https://accredi-api.azurewebsites.net/",
     "MVCPublicUrl": "https://localhost:44364",
     "CorsOrigins": "https://*.Accredi.com",
     "DisablePII": false,
@@ -18,9 +18,9 @@
     }
   },
   "AuthServer": {
-    "Authority": "https://localhost:44359",
+    "Authority": "https://account.accredi.app",
     "RequireHttpsMetadata": true,
-    "MetaAddress": "https://localhost:44359",
+    "MetaAddress": "https://account.accredi.app",
     "SwaggerClientId": "Accredi_Swagger"
   },
   "StringEncryption": {
